--- a/templates/match.conf.j2
+++ b/templates/match.conf.j2
@@ -1,1 +1,13 @@
 # {{ ansible_managed }}
+
+{% for output in fluentd_outputs_conf %}
+<match {{ output.tag }}>
+  @type {{ output.type }}
+{% for key, value in output.items()|sort(attribute='0')  %}
+{% if key == "params" %}
+  {{ value |fluentd_params_to_text }}
+{% endif %}
+{% endfor %}
+</match>
+{% endfor %}
+
