Wait for network to be online (#31)
Propagate https://github.com/cloudalchemy/ansible-node-exporter/pull/83
[minor]

--- a/templates/fluentd_exporter.service.j2
+++ b/templates/fluentd_exporter.service.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 [Unit]
 Description=Fluentd Metrics Exporter
-After=network.target
+After=network-online.target
 
 [Service]
 Type=simple
