--- a/templates/fluentd_exporter.service.j2
+++ b/templates/fluentd_exporter.service.j2
@@ -2,6 +2,7 @@
 [Unit]
 Description=Fluentd Metrics Exporter
 After=network-online.target
+StartLimitInterval=0
 
 [Service]
 Type=simple
@@ -10,6 +11,7 @@ ExecStart=/usr/local/bin/fluentd_exporter -scrape_uri "http://localhost:24220/ap
 
 SyslogIdentifier=fluentd_exporter
 Restart=always
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
